Disable 'Create New' and 'Delete' buttons when editing

--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -14,10 +14,18 @@
 				{{ (profile.name === undefined) ? 'New Profile' : profile.name }}
 		</ion-radio>
 
-		<button class="button create text-and-lpc profiles" ng-click="createProfile()">
+		<button
+			class="button create text-and-lpc profiles"
+			ng-click="createProfile()"
+			ng-disabled="isEditing"
+			ng-hide="isEditing">
 			Create New Profile
 		</button>
-		<button class="button danger text-and-lpc profiles" ng-click="deleteAllProfiles()">
+		<button
+			class="button danger text-and-lpc profiles"
+			ng-click="deleteAllProfiles()"
+			ng-disabled="isEditing"
+			ng-hide="isEditing">
 			Delete All Profiles
 		</button>
 
@@ -29,30 +37,96 @@
 			<h3>uuid: {{data.currentProfile.uuid}}</h3>
 			<li>
 				<strong>Name:</strong>
-				<input type="text" name="name" class="profiles" ng-model="data.currentProfile.name" placeholder="Name" ng-class="editing" ng-disabled="!isEditing">
+				<input
+					type="text"
+					name="name"
+					class="profiles"
+					ng-model="data.currentProfile.name"
+					placeholder="Name"
+					ng-class="editing"
+					ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Age:</strong>
-				<input type="number" name="age" class="profiles" min="1" max="99" ng-model="data.currentProfile.age" placeholder="Age" ng-class="editing" ng-disabled="!isEditing">
+				<input
+					type="number"
+					name="age"
+					class="profiles"
+					min="1"
+					max="99"
+					ng-model="data.currentProfile.age"
+					placeholder="Age"
+					ng-class="editing"
+					ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Height Feet:</strong>
-				<input type="number" name="heightFeet" class="profiles" min="0" max="8" ng-model="data.currentProfile.heightFeet" placeholder="Feet" ng-class="editing" ng-disabled="!isEditing">
+				<input
+					type="number"
+					name="heightFeet"
+					class="profiles"
+					min="0"
+					max="8"
+					ng-model="data.currentProfile.heightFeet"
+					placeholder="Feet"
+					ng-class="editing"
+					ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Inches:</strong>
-				<input type="number" name="heightInches" class="profiles" min="0" max="11" ng-model="data.currentProfile.heightInches" placeholder="Inches" ng-class="editing" ng-disabled="!isEditing">
+				<input
+					type="number"
+					name="heightInches"
+					class="profiles"
+					min="0"
+					max="11"
+					ng-model="data.currentProfile.heightInches"
+					placeholder="Inches"
+					ng-class="editing"
+					ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Sex:</strong>
-				<ion-radio ng-model="data.currentProfile.gender" ng-value="'Male'" ng-class="editing" ng-disabled="!isEditing">Male</ion-radio>
-				<ion-radio ng-model="data.currentProfile.gender" ng-value="'Female'" ng-class="editing" ng-disabled="!isEditing">Female</ion-radio>
+				<ion-radio
+					ng-model="data.currentProfile.gender"
+					ng-value="'Male'"
+					ng-class="editing"
+					ng-disabled="!isEditing">
+					Male
+				</ion-radio>
+				<ion-radio
+					ng-model="data.currentProfile.gender"
+					ng-value="'Female'"
+					ng-class="editing"
+					ng-disabled="!isEditing">
+					Female
+				</ion-radio>
 			</li>
 
 			<li>
-				<button type="button" class="button profiles" ng-click="setIsEditing(true)" ng-hide="isEditing">Edit</button>
-				<button type="button" class="button profiles" ng-click="saveProfile()" ng-hide="!isEditing">Save</button>
-				<button type="button" class="button profiles" ng-click="discardProfile()" ng-hide="!isEditing">Discard</button>
+				<button
+					type="button"
+					class="button profiles"
+					ng-click="setIsEditing(true)"
+					ng-hide="isEditing"
+					ng-disabled="!data.currentProfile"
+					ng-hide="!data.currentProfile">
+					Edit
+				</button>
+				<button 
+					type="button" 
+					class="button profiles" 
+					ng-click="saveProfile()" 
+					ng-hide="!isEditing">
+					Save
+				</button>
+				<button
+					type="button"
+					class="button profiles"
+					ng-click="discardProfile()"
+					ng-hide="!isEditing">
+					Cancel
+				</button>
 			</li>
 		</ul>
 	</div>
