--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -35,7 +35,7 @@
 	<div class="profiles__info">
 		<ul class="list">
 			<h2>{{data.currentProfile.name}}</h2>
-			<h3>uuid: {{data.currentProfile.uuid}}</h3>
+			<button ng-click="deleteProfile(data.currentProfile)">Discard</button>
 			<li>
 				<strong>Name:</strong>
 				<input
@@ -126,7 +126,7 @@
 				<button
 					type="button"
 					class="button profiles"
-					ng-click="discardProfile()"
+					ng-click="cancelEdit()"
 					ng-hide="!isEditing">
 					Cancel
 				</button>
