Update app styles

--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Free Play" class="text-content">
 	<div class="text-and-lpc__text">
-		Play around for free I guess
+		This is the place to practice your /r/ sounds on your own. There are no prompts or words to match here. It's just you and the wave.
 	</div>
 	<lpc-directive slider="true"></lpc-directive>
 </ion-view>
