--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -12,9 +12,10 @@
 	<!-- Slider -->
 	<div
 		ng-if="slider"
-		class="item range">
+		class="lpc-range">
 
 		<input
+			ng-if="slider"
 			type="range"
 			min="0"
 			max="4500"
@@ -23,6 +24,6 @@
 			data-thumbwidth="50"/>
 
 		<output name="rangeVal"></output>
-	</div>
+	<!-- </div> -->
 
 </div>
