Add padding to content container

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -22,6 +22,7 @@
 			ng-model="data.targetF3"
 			ng-change="updateTarget()"
 			data-thumbwidth="50"/>
-
 		<output name="rangeVal"></output>
+
+		<div id="sand"></div>
 </div>
