--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Words" class="text-content">
+<ion-view view-title="Word Quest" class="text-content">
 	<div class="text-and-lpc__text">
 		Different words and stuff
 	</div>
