Style 'ResetLPC' button

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -28,8 +28,8 @@
 
 	<div class="lpc-buttons">
 		<button
-			style="margin:40px;"
-			ng-click="resetF3()">
+			ng-click="resetF3()"
+			class="reset-button">
 			Reset F3
 		</button>
 	</div>
