Add full-width option to lpc

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,6 +1,6 @@
 <div class="lpc-container">
 
-	<div class="slider-and-canvas">
+	<div class="slider-and-canvas" ng-class="{'full-width': !rate && !reset}">
 		<!-- Renderer will be inserted here -->
 		
 		<!-- Slider -->
