Got rid of the automatic routing to free-play, since it seemed superfluous and may have been causing some bugs. Also, moved the content of profiles to an ion-pane, which clears up some of the issues we've been seeing where the profiles view still has touch control even though we've navigated away from it

--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -1,4 +1,6 @@
-<ion-view view-title="Profiles" class="text-and-lpc profiles">
+<ion-view view-title="Profiles" class="text-and-lpc">
+
+	<ion-pane class="profiles">
 
 	<ion-list class="list profiles__list">
 
@@ -150,5 +152,7 @@
 					Cancel
 				</button>
 	</div>
+
+	</ion-pane>
 
 </ion-view>
