--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -21,5 +21,5 @@
 	<ion-radio ng-model="rating" ng-value="2" ng-hide="!isPracticing">Decent</ion-radio>
 	<ion-radio ng-model="rating" ng-value="3" ng-hide="!isPracticing">Great</ion-radio>
 	
-	<lpc-directive slider="true" rate="true" reset="true"></lpc-directive>
+	<lpc-directive slider="true" rate="isPracticing" reset="true"></lpc-directive>
 </ion-view>
