Duplicate nav SVGs for active states

--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -9,6 +9,12 @@
         ui-sref="{{ 'root.' + tab.sref }}"
         ng-class="{ 'active': state.current.url === tab.sref }">
         <div class="navTabText">
+          <img
+            ng-hide="state.current.url === tab.sref"
+            ng-src="{{ 'img/' + tab.sref + '.svg' }}">
+          <img
+            ng-show="state.current.url === tab.sref"
+            ng-src="{{ 'img/' + tab.sref + '-b.svg' }}">
           {{tab.title}}
         </div>
       </item>
