--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -11,10 +11,12 @@
         <div class="navTabText">
           <img
             ng-hide="state.current.url === tab.sref"
-            ng-src="{{ 'img/' + tab.sref + '.svg' }}">
+            ng-src="{{ 'img/' + tab.sref + '.svg' }}"
+            class="nav-svg">
           <img
             ng-show="state.current.url === tab.sref"
-            ng-src="{{ 'img/' + tab.sref + '-b.svg' }}">
+            ng-src="{{ 'img/' + tab.sref + '-b.svg' }}"
+            class="nav-svg">
           {{tab.title}}
         </div>
       </item>
