Positioning is a bit off now, but it's possible to drag the star around now without slowing down the LPC

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -2,30 +2,10 @@
 
 	<div
 		class="slider-and-canvas"
-		ng-class="{'full-width': !rate && !reset}">
+		ng-class="{'full-width': !rate && !reset}"
+		on-touch="touched($event)"
+		on-drag="touched($event)">
 		<!-- Renderer will be inserted here -->
-		
-		<!-- Slider -->
-		<div
-			ng-if="slider"
-			class="lpc-range">
-		
-			<!-- Starfish -->
-			<input
-				ng-if="slider"
-				type="range"
-				min="0"
-				max="4500"
-				ng-model="data.targetF3"
-				ng-change="updateTarget()"
-				data-thumbwidth="50"/>
-			
-			<!-- Line + numbers -->
-			<output name="rangeVal"></output>
-			
-			<div id="sand"></div>
-		
-		</div>
 	</div>
 
 	<div class="lpc-buttons">
@@ -40,7 +20,7 @@
 				Great
 			</button>
 		</div>
-		
+
 		<button
 			ng-click="resetF3()"
 			class="reset-button"
