--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -20,5 +20,5 @@
 		Uploading {{uploadProgress * 100}}
 	</p>
 	
-	<lpc-directive slider="true" rate="isPracticing" reset="true"></lpc-directive>
+	<lpc-directive slider="true" rate="isPracticing" reset="true" sand="true"></lpc-directive>
 </ion-view>
