updates img dir to contain subdir for app sections

--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -11,11 +11,11 @@
         <div class="navTabText">
           <img
             ng-hide="state.current.url === tab.sref"
-            ng-src="{{ 'img/' + tab.sref + '.svg' }}"
+            ng-src="{{ 'img/nav/' + tab.sref + '.svg' }}"
             class="nav-svg">
           <img
             ng-show="state.current.url === tab.sref"
-            ng-src="{{ 'img/' + tab.sref + '-b.svg' }}"
+            ng-src="{{ 'img/nav/' + tab.sref + '-b.svg' }}"
             class="nav-svg">
           {{tab.title}}
         </div>
