updates root template and start-state-service with latest nav graphics & creates global scss vars in common-styles

--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -1,6 +1,6 @@
-<ion-view view-title="staRt" id="nav-and-content-container">
+<!-- <ion-view view-title="staRt" id="nav-and-content-container">
 
-  <!-- Tabs -->
+  <!- Tabs ->
   <div id="nav-container">
     <list class="navTabs">
       <item
@@ -23,11 +23,57 @@
     </list>
   </div>
   
+  <!- Title Bar ->
+  <ion-nav-bar></ion-nav-bar>
+
+  <!- Content ->
+  <ion-nav-view name="content-view" id="content-container">
+  </ion-nav-view>
+  
+</ion-view>
+-->
+<div id="statusBar-bg"></div>
+
+<ion-view view-title="staRt" id="nav-and-content-container">
+  
   <!-- Title Bar -->
   <ion-nav-bar></ion-nav-bar>
 
   <!-- Content -->
   <ion-nav-view name="content-view" id="content-container">
   </ion-nav-view>
-  
+
+  <!-- Tabs --> 
+  <div id="nav-container">
+    <list class="navTabs">
+
+      <item
+        ng-repeat="tab in tabData"
+        class="navTab"
+        ui-sref="{{ 'root.' + tab.sref }}"
+        ng-class="{ 'active': state.current.url === tab.sref }">
+        
+        <div class="navTabText">
+
+          <!-- defines img inactive state -->
+          <img
+            ng-if="state.current.url != tab.sref" 
+            ng-src="{{ 'img/nav/' + tab.sref + '.svg' }}"
+            class="nav-svg"
+          >
+          <!-- defines img active state -->
+          <img 
+            ng-if="state.current.url === tab.sref" 
+            ng-src="{{ 'img/nav/' + tab.sref + '-b.svg' }}"
+            class="nav-svg animated {{ tab.ani }}"
+          >
+          
+          {{tab.title}}
+
+        </div>
+
+      </item>
+    </list>
+  </div>
+   
 </ion-view>
