--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -6,8 +6,7 @@
   <ion-nav-bar></ion-nav-bar>
 
   <!-- Content -->
-  <ion-nav-view name="content-view" id="content-container">
-  </ion-nav-view>
+  <ion-nav-view name="content-view" id="content-container"></ion-nav-view>
 
   <!-- Tabs --> 
   <div id="nav-container">
