adds renamed ionic framework css to css compilers

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>staRt</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, height=device-height">
-    <link rel="stylesheet" href="lib/ionic/css/ionic.css">
+    <link rel="stylesheet" href="css/ionic.app.css">
     <link rel="stylesheet" href="css/app_styles.css">
   </head>
 
