--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body ng-app="start">
+    <div id="statusBar-bg"></div>
     <ion-nav-view name="app-view" id="app-container"></ion-nav-view>
 
     <!-- inject:bower:js  -->
