--- a/staRt/www/states/root/syllables/syllables_template.html
+++ b/staRt/www/states/root/syllables/syllables_template.html
@@ -1,9 +1,3 @@
 <ion-view view-title="Syllables" class="state-contentBox">
-	<div class="syll-contentBox">
-
-		<div class="text-and-lpc__text">
-			Syl-la-bles
-		</div>
-		
-	</div> <!-- end syll-contentBox-->
+	<practice-directive data='"data/probe_BL_MN.csv"' ></practice-directive>
 </ion-view>
