--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -1,28 +1,3 @@
 <ion-view view-title="Word Quest" class="state-contentBox">
-	<div class="words-contentBox">
-
-		<button style="margin:40px;" ng-click="beginWordPractice()" ng-hide="isPracticing">
-			Start Word Practice
-		</button>
-		<button style="margin:40px;" ng-click="nextWord()" ng-hide="!isPracticing">
-			Next Word
-		</button>
-		<button
-			style="margin:40px;"
-			ng-click="endWordPractice()"
-			ng-hide="!isPracticing">
-			Stop Word Practice
-		</button>
-		<p
-			ng-hide="!isPracticing"
-			class="words-word">
-			{{currentWord}}
-		</p>
-		<p ng-hide="!isUploading">
-			Uploading {{uploadProgress * 100}}
-		</p>
-		
-		<lpc-directive slider="true" rate="isPracticing" reset="true" sand="true"></lpc-directive>
-
-	</div> <!-- end words-contentBox-->
+	<practice-directive data='"data/staRt_wordlist.csv"' ></practice-directive>
 </ion-view>
