Show LPC -> Show Wave

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -31,14 +31,14 @@
 			ng-click="showLPC()"
 			class="reset-button"
 			ng-hide="!lpcHidden || rate">
-			Show LPC
+			Show Wave
 		</button>
 
 		<button
 			ng-click="hideLPC()"
 			class="reset-button"
 			ng-hide="lpcHidden || rate">
-			Hide LPC
+			Hide Wave
 		</button>
 	</div>
 
