Added word practice and syllable practice. Need to figure out how to use ng-view (or something like it) to get syllable probe and word probe up and running

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -31,21 +31,21 @@
 
 		<button
 			ng-click="resetF3()"
-			class="reset-button"
+			class="reset-button big-button"
 			ng-if="reset">
 			Reset Target
 		</button>
 
 		<button
 			ng-click="showLPC()"
-			class="reset-button"
+			class="reset-button big-button"
 			ng-hide="!lpcHidden || rate">
 			Show Wave
 		</button>
 
 		<button
 			ng-click="hideLPC()"
-			class="reset-button"
+			class="reset-button big-button"
 			ng-hide="lpcHidden || rate">
 			Hide Wave
 		</button>
