--- a/staRt/www/states/root/syllables/syllables_template.html
+++ b/staRt/www/states/root/syllables/syllables_template.html
@@ -1,3 +1,3 @@
 <ion-view view-title="Syllables" class="state-contentBox">
-	<practice-directive data='"data/probe_BL_MN.csv"' ></practice-directive>
+	<practice-directive data='"data/probe_BL_MN.csv"' order='"random"' count="100"></practice-directive>
 </ion-view>
