--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -1,3 +1,3 @@
 <ion-view view-title="Word Quest" class="state-contentBox">
-	<practice-directive data='"data/staRt_wordlist.csv"' ></practice-directive>
+	<practice-directive data='"data/Word_Practice.csv"' order='"random"' count="100"></practice-directive>
 </ion-view>
