fixes #56 --- Auto session renamed, fixes #55 --- word practice csv updated, fixes #54 --- syllable test probe implemented, fixes #43 --- syllable practice implemented

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -4,7 +4,7 @@
 		class="slider-and-canvas"
 		ng-class="{'full-width': !rate && !reset}">
 		<!-- Renderer will be inserted here -->
-		<canvas id="lpc-canvas" ng-hide="lpcHidden" ></canvas>
+		<canvas id="lpc-canvas" ng-hide="lpcHidden || probe" ></canvas>
 	</div>
 
 	<div class="lpc-buttons">
@@ -32,13 +32,14 @@
 		<button
 			ng-click="resetF3()"
 			class="reset-button big-button"
-			ng-if="reset">
+			ng-if="reset && !probe">
 			Reset Target
 		</button>
 
 		<button
 			ng-click="showLPC()"
 			class="reset-button big-button"
+			ng-if="!probe"
 			ng-hide="!lpcHidden || rate">
 			Show Wave
 		</button>
@@ -46,6 +47,7 @@
 		<button
 			ng-click="hideLPC()"
 			class="reset-button big-button"
+			ng-if="!probe"
 			ng-hide="lpcHidden || rate">
 			Hide Wave
 		</button>
