Updated the app bundle id (stupid xcode nonsense) and fixed a bunch of other stuff too

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -4,7 +4,7 @@
 		class="slider-and-canvas"
 		ng-class="{'full-width': !rate && !reset}">
 		<!-- Renderer will be inserted here -->
-		<canvas id="lpc-canvas" ng-hide="lpcHidden || probe" ></canvas>
+		<canvas id="lpc-canvas" ng-hide="lpcHidden || probe || waveHidden" ></canvas>
 	</div>
 
 	<div class="lpc-buttons">
