--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -21,6 +21,13 @@
 		Uploading {{uploadProgress * 100}}
 	</p>
 
-	<lpc-directive probe="probe" slider="true" rate="isPracticing" reset="true" sand="true"></lpc-directive>
+	<lpc-directive
+		probe="probe"
+		slider="true"
+		rate="isPracticing"
+		reset="true"
+		sand="true"
+		waveHidden="isFeedbacking"
+	/>
 
 </div> <!-- end words-contentBox-->
