--- a/staRt/www/states/root/tutorial/sceneTemplates/waveDouble.html
+++ b/staRt/www/states/root/tutorial/sceneTemplates/waveDouble.html
@@ -1,26 +1,93 @@
 <div class="pageView">
-	
+
 	<img ng-if="currStep.bgImg.status != 'done'" ng-src="{{currStep.bgImg.url}}" class="tut-bgImg" ng-class="{'tut-bgImg--dim': currStep.bgImg.status === 'dim'}">
 
-	 <div class="tutPg-header" ng-if="currStep.header.txt">
-	 	<span ng-bind-html="currStep.header.txt"></span>
+	 <div class="tutPg-header" ng-if="currStep.header.txt" ng-repeat="txt in currStep.header.txt">
+	 	<span ng-bind-html="txt">{{txt}}</span>
 	</div> 
 	
-	<div class="tutPgView-content">
+	<div class="tutWave-content">
 		<div class="leftBox">
-			<div class="leftRow leftRow1">{{currStep.LRow1}}</div>
-			<div class="leftRow leftRow2">{{currStep.LRow2}}</div>
-			<div class="leftRow leftRow3">
-				{{currStep.LRow3}}
-				<button class="tutBtn" ng-click="console.log('hello')">{{currStep.input.txt}}</button>
-			</div>
+
+			<!-- ==================
+			 WAVE 1 -->
+			<div class="leftRow wave1">
+				<div class="waveFrame">
+
+					<div class="lpcBox" >
+						<div class="soundImgBox" style="background-image: url('{{currStep.LRow1.lpcImg}}')">
+						</div>
+					</div>
+
+					<div class="waveFrame-label">	
+						<div class="waveFrame-label--title" ng-if="currStep.LRow1.labelTitle">
+							<span ng-bind-html="currStep.LRow1.labelTitle"></span>
+						</div>
+
+						<div class="waveFrame-label--txt" ng-if="currStep.LRow1.labelTxt">
+							<span ng-bind-html="currStep.LRow1.labelTxt"></span>
+						</div>
+					</div> <!-- end waveframe-label -->
+				</div> <!-- end waveframe -->
+			</div> <!-- end wave 1 -->
+
+		
+			<!-- ==================
+			 WAVE 2 -->
+			 <div class="leftRow wave2">
+				<div class="waveFrame">
+
+					<div class="lpcBox" >
+						<div class="soundImgBox" style="background-image: url('{{currStep.LRow2.lpcImg}}')">
+						</div>
+					</div>
+
+					<div class="waveFrame-label">	
+						<div class="waveFrame-label--title" ng-if="currStep.LRow1.labelTitle">
+							<span ng-bind-html="currStep.LRow2.labelTitle"></span>
+						</div>
+
+						<div class="waveFrame-label--txt" ng-if="currStep.LRow1.labelTxt">
+							<span ng-bind-html="currStep.LRow2.labelTxt"></span>
+						</div>
+					</div> <!-- end waveframe-label -->
+				</div> <!-- end waveframe -->
+			</div> <!-- end wave 2 -->
+
+		</div> <!-- end leftBox -->
+
+		<!-- ==================
+			 INPUT BOX -->
+
+		<div class="inputBox">
+			<button
+				class="tutBtn"
+				ui-sref="{{'root.tutorial.' + currStep.input.next}}">
+				{{currStep.input.txt}}
+			</button>
 		</div>
 
+
+		<!-- ==================
+			 RIGHT BOX -->
 		<div class="rightBox">
-			<div class="rightRow1">.rightRow1</div>
-			<div class="starBox">.starBox</div>
-		</div>
+
+			<div class="rightRow1" ng-if="currStep.RRow1.txt" ng-repeat="txt in currStep.RRow1.txt">
+				<div ng-bind-html="txt">{{txt}}</div>
+			</div>
+
+
+			<div class="starBox">
+				<img 
+				ng-src="{{currStep.star.img}}" 
+				class="starImg" 
+				style="height:{{currStep.star.hgt}}; 
+					width:{{currStep.star.w}}; 
+					top:{{currStep.star.top}}; 
+					left:{{currStep.star.left}};">
+			<div>
+
+		</div> <!-- end rightBox -->
 
 	</div> <!-- end tutPgView-content -->
 </div> <!-- end .pageView -->
-
