--- a/staRt/www/states/root/tutorial/sceneTemplates/waveSingle.html
+++ b/staRt/www/states/root/tutorial/sceneTemplates/waveSingle.html
@@ -6,23 +6,30 @@
 	 	<span ng-bind-html="currStep.header.txt"></span>
 	</div> 
 	
-	<div class="tutSingleWave-content">
+	<div class="tutWave-content">
 		<div class="leftBox">
 
 			<div class="leftRow wave1">
-					<div class="waveFrame">
-						<div class="lpcBox"></div>
-						<div class="waveFrame-label">
-							<div class="waveFrame-label--title" ng-if="currStep.LRow1.labelTitle">
-								<span ng-bind-html="currStep.LRow1.labelTitle"></span>
-							</div>
 
-							<div class="waveFrame-label--txt" ng-if="currStep.LRow1.labelTxt">
-								<span ng-bind-html="currStep.LRow1.labelTxt"></span>
-							</div>
-						</div>
+				<div class="waveFrame">
+
+				<div class="lpcBox" >
+					<div class="soundImgBox" style="background-image: url('{{currStep.LRow1.lpcImg}}')">
 					</div>
-			</div>
+				</div>
+
+				<div class="waveFrame-label">
+					
+					<div class="waveFrame-label--title" ng-if="currStep.LRow1.labelTitle">
+						<span ng-bind-html="currStep.LRow1.labelTitle"></span>
+					</div>
+
+					<div class="waveFrame-label--txt" ng-if="currStep.LRow1.labelTxt">
+						<span ng-bind-html="currStep.LRow1.labelTxt"></span>
+					</div>
+				</div> <!-- end waveframe-label -->
+				</div> <!-- end waveframe -->
+			</div> <!-- end wave 1 -->
 
 			<div class="leftRow leftRow2" ng-if="currStep.LRow2.txt">
 				<span ng-bind-html="currStep.LRow2.txt"></span>
@@ -31,7 +38,7 @@
 			<div class="leftRow leftRow3" ng-if="currStep.LRow3.txt">
 				<span ng-bind-html="currStep.LRow3.txt"></span>
 			</div>
-		</div>
+		</div> <!-- end leftBox -->
 
 		<div class="inputBox">
 			<button
