--- a/staRt/www/states/root/tutorial/sceneTemplates/waveNone.html
+++ b/staRt/www/states/root/tutorial/sceneTemplates/waveNone.html
@@ -7,6 +7,7 @@
 	</div> 
 	
 	<div class="tutNoWave-content">
+		
 		<div class="noWaveBox">
 
 			<div class="noWaveRow" ng-if="currStep.LRow1.items" ng-repeat="item in currStep.LRow1.items">
@@ -20,7 +21,7 @@
 					{{currStep.input.txt}}
 				</button>
 			</div>
-		</div>
+		</div> <!-- end noWaveBox -->
 		
 		<img 
 			ng-src="{{currStep.char.img}}" 
