--- a/staRt/www/states/root/tutorial/sceneTemplates/waveDouble.html
+++ b/staRt/www/states/root/tutorial/sceneTemplates/waveDouble.html
@@ -5,6 +5,8 @@
 	 <div class="tutPg-header" ng-if="currStep.header.txt" ng-repeat="txt in currStep.header.txt">
 	 	<span ng-bind-html="txt">{{txt}}</span>
 	</div> 
+
+	<lpc-directive slider="true" reset="true" sand="true"></lpc-directive>
 	
 	<div class="tutWave-content">
 		<div class="leftBox">
@@ -54,19 +56,18 @@
 				</div> <!-- end waveframe -->
 			</div> <!-- end wave 2 -->
 
+			<!-- - - - - - - - - - - - - 
+				 INPUT BOX -->
+
+			<div class="inputBox">
+				<button
+					class="tutBtn"
+					ui-sref="{{'root.tutorial.' + currStep.input.next}}">
+					{{currStep.input.txt}}
+				</button>
+			</div>
+
 		</div> <!-- end leftBox -->
-
-		<!-- ==================
-			 INPUT BOX -->
-
-		<div class="inputBox">
-			<button
-				class="tutBtn"
-				ui-sref="{{'root.tutorial.' + currStep.input.next}}">
-				{{currStep.input.txt}}
-			</button>
-		</div>
-
 
 		<!-- ==================
 			 RIGHT BOX -->
