--- a/staRt/www/states/root/tutorial/sceneTemplates/waveSingleLiveLPC.html
+++ b/staRt/www/states/root/tutorial/sceneTemplates/waveSingleLiveLPC.html
@@ -6,8 +6,7 @@
 	 	<span ng-bind-html="currStep.header.txt"></span>
 	</div> 
 	
-	<lpc-directive slider="false" reset="false" sand="false" probe="false" rate="false" waveHidden="false">
-</lpc-directive>
+
 	<!-- <lpc-directive slider="true" reset="true" sand="true"></lpc-directive> -->
 
 	<div class="tutWave-content">
@@ -18,8 +17,11 @@
 				<div class="waveFrame">
 
 				<div class="lpcBox" >
-					<div class="soundImgBox" style="background-image: url('{{currStep.LRow1.lpcImg}}')">
-					</div>
+					<!--<div class="soundImgBox" style="background-image: url('{{currStep.LRow1.lpcImg}}')">
+					</div> -->
+					<div id="lpc-canvas"> </div>
+					<lpc-directive slider="false" reset="false" sand="false" probe="false" rate="false" waveHidden="false">
+					</lpc-directive>
 				</div>
 
 				<div class="waveFrame-label">
